# sphinx-collections

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  Makefile  README.rst  doc-requirements.txt  noxfile.py  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yaml
docs/: changelog.rst  conf.py  configuration.rst  directives.rst  index.rst  requirements.txt
docs/_static/: custom.css
docs/collections/: index.rst
docs/drivers/: copy.rst  copy_file.rst  copy_folder.rst  function.rst  git.rst  index.rst  jinja.rst  report.rst  string.rst  symlink.rst
docs/examples/: jinja_template.rst.temp
sphinx_collections/: __init__.py  api.py  collections.py  main.py
sphinx_collections/directives/: if_collection.py
sphinx_collections/drivers/: __init__.py  copy_file.py  copy_folder.py  function.py  git.py  jinja.py  report.py  string.py  symlink.py
sphinxcontrib/collections/: __init__.py  api.py  collections.py  main.py
sphinxcontrib/collections/directives/: if_collection.py
sphinxcontrib/collections/drivers/: __init__.py  copy.py  copy_file.py  copy_folder.py  function.py  git.py  jinja.py  report.py  report.rst.template  string.py  symlink.py
tests/: conftest.py  test_config_copy_file.py  test_config_copy_file_with_dir.py  test_config_copy_folder.py  test_config_copy_function.py  test_config_copy_function_with_dir.py  test_config_git.py  test_config_git_with_dir.py  test_config_jinja_multiple.py  test_config_jinja_multiple_with_dir.py  test_config_jinja_single.py  test_config_jinja_single_with_dir.py  test_config_report.py  test_config_string.py  test_config_symlink.py  test_config_symlink_invalid_source.py  test_config_symlink_invalid_target.py  test_config_symlink_to_file.py  test_config_symlink_two.py  test_config_symlink_with_dir.py  test_config_tags.py  util.py
tests/doc_test/config_copy_file/: conf.py  make.bat
tests/doc_test/config_copy_file_data/: my_file.txt
tests/doc_test/config_copy_file_with_dir/: conf.py
tests/doc_test/config_copy_folder/: Makefile  conf.py  index.rst
tests/doc_test/config_copy_folder_data/: my_file1.txt  my_file2.txt  not_included.rst
tests/doc_test/config_function/: conf.py  index.rst
tests/doc_test/config_function_with_dir/: conf.py  index.rst
tests/doc_test/config_git/: conf.py  index.rst
tests/doc_test/config_git_with_dir/: conf.py  index.rst
tests/doc_test/config_jinja_multiple/: conf.py  index.rst
tests/doc_test/config_jinja_multiple_with_dir/: conf.py  index.rst
tests/doc_test/config_jinja_single/: conf.py  index.rst
tests/doc_test/config_jinja_single_with_dir/: conf.py  index.rst
tests/doc_test/config_report/: conf.py  index.rst
tests/doc_test/config_string/: Makefile  conf.py  index.rst
tests/doc_test/config_symlink/: conf.py  index.rst  make.bat
tests/doc_test/config_symlink_data/: awesome.rst
tests/doc_test/config_symlink_invalid_source/: conf.py  index.rst
tests/doc_test/config_symlink_invalid_target/: conf.py  index.rst
tests/doc_test/config_symlink_to_file/: conf.py  index.rst
tests/doc_test/config_symlink_two/: conf.py  index.rst
tests/doc_test/config_symlink_with_dir/: conf.py  index.rst
tests/doc_test/config_tags/: conf.py  index.rst
tests/dummy/: dummy.rst
